--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-186235654-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-186235654-1');
+  </script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -50,6 +59,6 @@
   })();
   </script>
   <!--End of Tawk.to Script-->
-  
+
 </body>
 </html>
