--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-186235654-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HEZ9DH2WX6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-186235654-1');
+    gtag('config', 'G-HEZ9DH2WX6');
   </script>
 </head>
 <body>
