--- a/2.html
+++ b/2.html
@@ -4,13 +4,13 @@
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HEZ9DH2WX6"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QLGYWQHBQV"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-HEZ9DH2WX6');
+    gtag('config', 'G-QLGYWQHBQV');
   </script>
 </head>
 <body>
