--- a/2.html
+++ b/2.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-186222412-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8LMN3S6CW"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-186222412-1');
+    gtag('config', 'G-Q8LMN3S6CW');
   </script>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
