--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8LMN3S6CW"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QLGYWQHBQV"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-Q8LMN3S6CW');
+    gtag('config', 'G-QLGYWQHBQV');
   </script>
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
