change universal analytics

--- a/1.html
+++ b/1.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QXSHW3J7W9"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-186224943-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-QXSHW3J7W9');
+    gtag('config', 'UA-186224943-1');
   </script>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
