--- a/1.html
+++ b/1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QXSHW3J7W9"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DYHENQSD7Y"></script>
   <script scr="ga.js"></script>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
