--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-DYHENQSD7Y"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-DYHENQSD7Y');
-  </script>
+  <script scr="ga.js"></script>
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
 </head>
