--- a/3.html
+++ b/3.html
@@ -2,8 +2,14 @@
 <html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DYHENQSD7Y"></script>
-  <script scr="ga.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G6P8FBC3J4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-G6P8FBC3J4');
+  </script>
   <title>WEB1 - JavaScript</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
